--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.7.0",
     "mongodb": "^4.13.0",
     "node": "^19.4.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   }
 }
