Banco de dados Deploy

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=mongodb://localhost:27017/mywallet
+DATABASE_URL=mongodb+srv://marcelomosl:19032003Mosl@mywallet-back.f4tovdd.mongodb.net/test
+# mongodb://localhost:27017/mywallet
